Fixes Send button #contact_form on mobile screens

--- a/src/client/css/style.css
+++ b/src/client/css/style.css
@@ -155,6 +155,7 @@ ul
         color: #000;
         margin: 0 -10px;
         padding: 12px 35px 12px 10px;
+
         cursor: pointer;
         text-transform: none;
     }
@@ -167,6 +168,7 @@ ul
     #nav-main #nav-main-menu a:active
     {
         text-decoration: none;
+
         color: #fff;
         background-color: #247ac1;
         background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #43a6e2), color-stop(100%, #247ac1));
@@ -1820,6 +1822,12 @@ section#contact_form .text-danger
 
     color: #fff;
     border-color: #fed136;
+}
+
+@media screen and (max-width: 768px) {
+  #contact_form {
+    padding-bottom: 10em;
+  }
 }
 
 /* Footer Start*/
